--- a/Client/index.html
+++ b/Client/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/logo.jpeg" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <meta
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
+    /> -->
     <title>BlueHorizon</title>
   </head>
   <body>
